--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,6 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
-
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -184,6 +183,5 @@ fabric.properties
 # idea folder, uncomment if you don't need it
 .idea
 
+staticfiles/
 .staticfiles
-.staticfiles/admin
-.staticfiles/portal
